updated docs, and updated dist fixed alignment issues with buttons reset query button status when query finishes fixed alignment of absolute positioned elements when scrollbar appears

--- a/src/main.css
+++ b/src/main.css
@@ -32,11 +32,16 @@ span.cm-error {
 	right: 5px;
 	z-index: 5;
 }
+.yasqe_buttons div {
+	vertical-align: middle;
+}
 .yasqe_queryButton {
+	display:inline-block;
 	cursor: pointer;
 }
 .yasqe_share {
 	cursor:pointer;
+	margin-right: 5px;
 }
 .yasqe_sharePopup {
 	position:absolute;
